# jacta-manipulation

./: .buildinfo  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  index.html  objects.inv  pyproject.toml  searchindex.js
.doctrees/: docs.doctree  index.doctree
.doctrees/api/action_trajectory/: index.doctree
.doctrees/api/benchmarking/: index.doctree
.doctrees/api/cmaes/: index.doctree
.doctrees/api/common/: index.doctree
.doctrees/api/constants/: index.doctree
.doctrees/api/controllers/: index.doctree
.doctrees/api/core/: index.doctree
.doctrees/api/cross_entropy_method/: index.doctree
.doctrees/api/dynamics/: index.doctree
.doctrees/api/environments/: index.doctree
.doctrees/api/experts/: index.doctree
.doctrees/api/learning/: index.doctree
.doctrees/api/model/: index.doctree
.doctrees/api/mppi/: index.doctree
.doctrees/api/mujoco_dynamics/: index.doctree
.doctrees/api/mujoco_helpers/: index.doctree
.doctrees/api/particle_filter/: index.doctree
.doctrees/api/path_resolvers/: index.doctree
.doctrees/api/paths/: index.doctree
.doctrees/api/planner/: index.doctree
.doctrees/api/predictive_sampling/: index.doctree
.doctrees/api/scenes/: index.doctree
.doctrees/api/simulator_plant/: index.doctree
.doctrees/api/spot_box/: index.doctree
.doctrees/api/spot_hand_navigation/: index.doctree
.doctrees/api/spot_navigation/: index.doctree
.doctrees/api_reference/: dynamics.doctree
.github/workflows/: build.yml  docs.yml  precommit.yml
_modules/: index.html
_sources/: index.md.txt
_sources/api_reference/: dynamics.md.txt
api/action_trajectory/: index.html
api/benchmarking/: index.html
api/cmaes/: index.html
api/common/: index.html
api/constants/: index.html
api/controllers/: index.html
api/core/: index.html
api/core/graph/: index.html
api/cross_entropy_method/: index.html
api/dynamics/: index.html
api/environments/: index.html
api/experts/: index.html
api/learning/: index.html
api/model/: index.html
api/mppi/: index.html
api/mujoco_dynamics/: index.html
api/mujoco_helpers/: index.html
api/particle_filter/: index.html
api/path_resolvers/: index.html
api/paths/: index.html
api/planner/: index.html
api/predictive_sampling/: index.html
api/scenes/: index.html
api/simulator_plant/: index.html
api/spot_box/: index.html
api/spot_hand_navigation/: index.html
api/spot_navigation/: index.html
api/spot_tire/: index.html
api/spot_yellow_chair/: index.html
api/tasks/: index.html
api/viser_app/: index.html
api/visualization/: index.html
api/visualizers/: index.html
api/visuals/: index.html
api_reference/dynamics/: index.html
dexterity/examples/planner/: BUILD.bazel  example_notebook.py  example_script.py
dexterity/examples/planner/config/: allegro_hand.yml  base.yml  bimanual_kuka_allegro.yml  bimanual_station.yml  box_push.yml  cartpole.yml  floating_hand.yml  kuka_allegro.yml  planar_hand.yml  satellite.yml  satellite_offcenter.yml  spot_bimanual_box.yml  spot_box_mocap.yml  spot_floating_box.yml  spot_floating_tire.yml  spot_lying_ball.yml  spot_lying_box.yml  spot_sitting_box.yml  spot_standing_box.yml  spot_tire.yml
dexterity/examples/planner/scripts/: ablations.py  benchmarking.py  env_example.py  example_profiling.py  spot_floating_example.py  spot_locomotion_example.py  spot_visuals.py
docs/: index.html
docs/source/: conf.py  docs.md  index.md
examples/learning/: imitation_learning.py  reinforcement_learning.py
examples/planner/: example_notebook.py
genindex/: index.html
jacta/common/: path_resolvers.py  paths.py
jacta/controllers/: __init__.py  sampling_base.py
jacta/learning/: learner.py  networks.py  normalizer.py  replay_buffer.py
jacta/mujoco_dynamics/: utils.py
jacta/tasks/: __init__.py  acrobot.py  cartpole.py  cylinder_push.py  mujoco_task.py  spot_base.py  spot_position_control.py  task.py
jacta/viser_app/: app.py  gui.py
log/controller/: spot_box_03_04_2025_15_57_29.txt
models/directives/: allegro_scene_tilt_wrist.yml  box_push.yml  box_push_2d.yml  floating_hand.yml  planar_hand.yml  spot_bimanual_stool.yml  spot_lying_ball.yml  spot_standing_box.yml
models/sdf/: spot_standing.sdf  spot_with_legs.sdf
models/xml/: spot_box.xml  spot_tire_rim.xml  spot_yellow_chair.xml
py-modindex/: index.html
search/: index.html
src/mujoco_extensions/: BUILD.bazel  CMakeLists.txt  pyproject.toml  rendering.py
src/mujoco_extensions/cmake/: FindOrFetchDeps.cmake
src/mujoco_extensions/mujoco_extensions/onnx_interface/: BUILD.bazel  onnx_interface.cpp
src/mujoco_extensions/mujoco_extensions/plugins/: dynamic_pd.cc  dynamic_pd.h
src/mujoco_extensions/mujoco_extensions/pybind/policy_rollout/: policy_rollout.cpp
src/mujoco_extensions/mujoco_extensions/system/: system_utils.cpp  system_utils.h
src/mujoco_extensions/src/mujoco_extensions/: __init__.py
src/mujoco_extensions/src/mujoco_extensions/jacobian_smoothing/: BUILD.bazel
src/mujoco_extensions/src/mujoco_extensions/policy_rollout/: BUILD.bazel
test/: test_einsum.py  test_linalg_utils.py  test_verification_paths.py  test_verification_visuals.py
test/dynamics/: test_gradients.py  test_mj_dynamics.py  test_sensor.py
test/learning/: BUILD.bazel  test_examples.py  test_learning.py  test_learning_examples.py  test_replay_buffer.py
test/planner/: planner_setup.py  test_action_sampler.py  test_graph.py  test_graph_worker.py  test_planner_examples.py
test/planner/benchmarking/: BUILD.bazel  test_run_benchmarks.py
test/planner/dynamics/: BUILD.bazel  test_mj_dynamics.py  test_sensor.py
test/planner/environments/: BUILD.bazel  test_base_env.py  test_tire_state_cache_generator.py
test/planner/linear_algebra/: BUILD.bazel  test_einsum.py  test_linalg_utils.py
test/planner/planner/: BUILD.bazel  planner_setup.py  test_action_processor.py  test_action_sampler.py  test_examples.py  test_graph.py  test_graph_worker.py  test_planner_examples.py
test/plugin/: test_pd_actuator.py
test/viser_app/: BUILD.bazel  test_visualizer.py
test/visualizers/: test_viser_app.py
(+731 files in other folders)
