# Copyright (c) 2024 Boston Dynamics AI Institute LLC. All rights reserved.

load("@rules_python//python:defs.bzl", "py_binary")

py_binary(
    name = "example_notebook",
    srcs = ["example_notebook.py"],
    deps = ["//dexterity/src:dexterity"],
)

filegroup(
    name = "config",
    srcs = glob(["config/**/*.yml"]),
    visibility = ["//visibility:public"],
)

py_binary(
    name = "example_script",
    srcs = ["example_script.py"],
    data = [":config"],
    deps = ["//dexterity/src:dexterity"],
)
