load("//tools/pytest:defs.bzl", "starfish_pytest")

starfish_pytest(
    name = "test_tire_state_cache_generator",
    srcs = ["test_tire_state_cache_generator.py"],
    data = ["//dexterity/examples/planner:config"],
    deps = ["//dexterity/src:dexterity"],
)

starfish_pytest(
    name = "test_base_env",
    srcs = ["test_base_env.py"],
    data = ["//dexterity/examples/planner:config"],
    deps = ["//dexterity/src:dexterity"],
)
