load("//tools/pytest:defs.bzl", "starfish_pytest")

py_library(
    name = "planner_setup",
    srcs = ["planner_setup.py"],
    imports = ["."],
    deps = ["//dexterity/src:dexterity"],
)

starfish_pytest(
    name = "test_action_processor",
    timeout = "long",
    testonly = True,
    srcs = ["test_action_processor.py"],
    data = [
        "//dexterity/examples/planner:config",
        "//dexterity/test:test_config",
    ],
    tags = ["exclusive"],
    deps = [":planner_setup"],
)

starfish_pytest(
    name = "test_action_sampler",
    timeout = "long",
    testonly = True,
    srcs = ["test_action_sampler.py"],
    data = [
        "//dexterity/examples/planner:config",
        "//dexterity/test:test_config",
    ],
    tags = ["exclusive"],
    deps = [":planner_setup"],
)

starfish_pytest(
    name = "test_graph_worker",
    timeout = "long",
    srcs = ["test_graph_worker.py"],
    data = [
        "//dexterity/examples/planner:config",
        "//dexterity/test:test_config",
    ],
    tags = ["exclusive"],
    deps = [
        ":planner_setup",
        "//dexterity/src:dexterity",
    ],
)

starfish_pytest(
    name = "test_graph",
    timeout = "long",
    srcs = ["test_graph.py"],
    data = [
        "//dexterity/examples/planner:config",
        "//dexterity/test:test_config",
    ],
    tags = ["exclusive"],
    deps = [
        ":planner_setup",
        "//dexterity/src:dexterity",
    ],
)

# TODO(jbruedigam) Removed until package is open sourced
# starfish_pytest(
#     name = "test_examples",
#     timeout = "long",
#     srcs = ["test_examples.py"],
#     data = ["//dexterity/examples/planner:config"],
#     tags = [
#         "exclusive",
#         "gpu_capable",
#     ],
#     deps = ["//dexterity/src:dexterity"],
# )
